--- a/package.json
+++ b/package.json
@@ -1,14 +1,39 @@
 {
-  "name": "opv",
-  "version": "1.0.0",
-  "description": "",
+  "name": "flaggy",
+  "version": "1.0.0-0",
+  "description": "Generates flags for unix command from a key/value object",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --reporter=lcov  --reporter=text-summary ava"
   },
-  "author": "",
+  "bugs": {
+    "url": "https://github.com/Kirkhammetz/flaggy/issues"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "homepage": "https://github.com/Kirkhammetz/flaggy#readme",
+  "author": "Simone Corsi <simonecorsi.rm@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "lodash.kebabcase": "^4.1.1"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
+    "ava": "^3.8.2",
+    "cz-conventional-changelog": "^3.1.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.1",
+    "markdown-toc": "^1.2.0",
+    "nyc": "^15.1.0",
+    "prettier": "^2.0.5",
+    "standard-version": "^7.1.0"
   }
 }
