--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,8 +1,12 @@
 name: Release
 
 on:
-  watch:
-    types: [started]
+  push:
+    branches:
+      - master
+  merge:
+    branches:
+      - master
 
 jobs:
   release:
