--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,15 +1,31 @@
-name: Release
+name: Bump version
 
 on:
   push:
     branches:
       - master
+    paths-ignore:
+      - "package.json"
+      - "CHANGELOG.md"
 
 jobs:
-  release:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: Conventional Changelog Action
-        uses: TriPSs/conventional-changelog-action@v2
+      - run: npm cit
+
+  version:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
         with:
-          github-token: ${{ secrets.github_token }}
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Bump version and push tag
+        uses: TriPSs/conventional-changelog-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          git-message: "chore(release): {version}"
+          preset: "angular"
+          tag-prefix: ""
+          output-file: "CHANGELOG.md"
