ci(versioning): on merging pr to master

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,12 +1,9 @@
 name: Bump version
 
 on:
-  push:
-    branches:
-      - master
-    paths-ignore:
-      - "package.json"
-      - "CHANGELOG.md"
+  pull_request:
+    types: [closed]
+    branches: master
 
 jobs:
   test:
