--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -27,6 +27,5 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           git-message: "chore(release): {version}"
-          preset: "angular"
           tag-prefix: ""
-          output-file: "CHANGELOG.md"
+          release-count: 0
