--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,16 +18,25 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      # - name: Bump version and push tag
+      #   - uses: actions/checkout@v2
+      #     with:
+      #       token: ${{ secrets.GITHUB_TOKEN }}
+      #   - uses: TriPSs/conventional-changelog-action@v2
+      #   with:
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     git-message: "chore(release): {version}"
+      #     tag-prefix: ""
+      #     release-count: 0
+      - name: Create github Release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Bump version and push tag
-        uses: TriPSs/conventional-changelog-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          git-message: "chore(release): {version}"
-          tag-prefix: ""
-          release-count: 0
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
 
   publish-npm:
     needs: version
