--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
           git-message: "chore(release): {version}"
           tag-prefix: ""
           release-count: 0
+          preset: ""
 
       - name: Create github Release
         uses: actions/create-release@v1
