docs(license): changed license
License in `package.json` now reflect the `LICENSE.md` file

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "homepage": "https://github.com/Kirkhammetz/flaggy#readme",
   "author": "Simone Corsi <simonecorsi.rm@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "lodash.kebabcase": "^4.1.1"
   },
