--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   "homepage": "https://github.com/Kirkhammetz/flaggy#readme",
   "author": "Simone Corsi <simonecorsi.rm@gmail.com>",
   "license": "MIT",
-  "dependencies": {
-    "lodash.kebabcase": "^4.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
