--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,7 @@ jobs:
       - run: npm t
 
   version:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -43,6 +44,7 @@ jobs:
           body: ${{ steps.changelog.outputs.changelog }}
 
   publish-npm:
+    needs: version
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
