--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
   "author": "Simone Corsi <simonecorsi.dev@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@saithodev/semantic-release-backmerge": "^2.0.0",
+    "@semantic-release/changelog": "^6.0.0",
+    "@semantic-release/commit-analyzer": "^9.0.1",
+    "@semantic-release/git": "^10.0.0",
+    "@semantic-release/github": "^8.0.1",
+    "@semantic-release/npm": "^8.0.2",
+    "@semantic-release/release-notes-generator": "^10.0.2",
     "@commitlint/cli": "^16.0.2",
     "@commitlint/config-conventional": "^16.0.0",
     "ava": "^4.0.1",
@@ -45,7 +52,6 @@
     "lint-staged": "^12.1.7",
     "markdown-toc": "^1.2.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.0.5",
-    "standard-version": "^9.3.2"
+    "prettier": "^2.0.5"
   }
 }
